--- a/2020/2020_Chignik_Inseason.Rmd
+++ b/2020/2020_Chignik_Inseason.Rmd
@@ -757,7 +757,7 @@ dir.create(paste0("../../2020/BAYES/Output/", sillys_strata))
 
 ## Summarize output
 
-We lost two fish in *BAYES* due to an unrecognized allele (CCCT for One_GPDH2.One_GPDH, evidently no one calls blues for One_GPDH2...). Need to update that in the samples size table.
+We lost two fish in *BAYES* from run 1 due to an unrecognized allele (CCCT for One_GPDH2.One_GPDH, evidently no one calls blues for One_GPDH2...). Need to update that in the samples size table.
 
 ```{r samples_size_update_run2}
 (
@@ -796,21 +796,7 @@ save_objects(objects = "SCHIG20_2_estimates", path = "../../2020/Estimates objec
 
 Create function to view traceplot
 ```{r traceplot_run2}
-trace_plot.f <- function(estimate_obj) {
-  par(mfrow = c(2, 1), mar = c(4.1, 4.1, 2.1, 2.1))
-  
-  plot(estimate_obj[[2]][[1]][seq(from = 1, to = 100000, by = 10), 1], type = "l", ylim = c(0, 1), ylab = "", main = "Black Lake", xlab = "")
-  abline(v = seq(from = 0, to = 10000, by = 2000))
-  par(mar = c(4.1, 4.1, 2.1, 2.1))
-  plot(estimate_obj[[2]][[1]][seq(from = 1, to = 100000, by = 10), 2], type = "l", ylim = c(0, 1), ylab = "", main = "Chignik Lake", xlab = "Repetitions", cex.lab = 1.2)
-  abline(v = seq(from = 0, to = 10000, by = 2000))
-  mtext(text = "Posterior", side = 2, outer = TRUE, line = -1, cex = 1.2)
-  
-  print(estimate_obj[[1]][[1]][, "GR"])
-}
-
-save_objects(objects = "trace_plot.f", path = "../../2020/Objects/")
-trace_plot.f(estimate_obj = SCHIG20_1_estimates)
+trace_plot.f(estimate_obj = SCHIG20_2_estimates)
 ```
 
 Add to summary
