--- a/2021/2021Chignik_report.Rmd
+++ b/2021/2021Chignik_report.Rmd
@@ -22,7 +22,7 @@ library(lubridate)
 library(knitr)
 library(kableExtra)
 library(ggpubr)
-load("../../2020/chignik_2020_run6.RData")
+load("../../2021/chignik_2021_run1_run6.RData")
 # 
 # date_range.df <- openings_strata.df %>% 
 #   filter(year == 2019, stat_week == sw)
@@ -39,20 +39,20 @@ load("../../2020/chignik_2020_run6.RData")
 # n_final <- get(paste0("sillys_strata_2019_SW", sw, "_n"))[sillys_strata, "Final"]
 ```
 
-# 2020 GSI Summary
+# 2021 GSI Summary
 
-Summary of genetic stock composition estimates (mean with 90% CI) for each of the `r nrow(sillys_strata_2020_n)` sampling strata to date.
+Summary of genetic stock composition estimates (mean with 90% CI) for each of the `r nrow(sillys_strata_2021_n)` sampling strata to date.
 
 ```{r summary_table, warning=FALSE, message=FALSE}
-sillys_strata_2020_n.df <- as_tibble(cbind(sillys_strata_2020_n, "silly_strata" = rownames(sillys_strata_2020_n))) %>% 
+sillys_strata_2021_n.df <- as_tibble(cbind(sillys_strata_2021_n, "silly_strata" = rownames(sillys_strata_2021_n))) %>% 
   dplyr::rename(n = final) %>% 
   select(silly, n) %>% 
   mutate(n = as.integer(n))
 
 options(knitr.kable.NA = '')
-chignik_2020_dates.bayes %>% 
+chignik_2021_dates.bayes %>% 
   unite(col = silly_strata, c("silly", "strata"), sep = "_", remove = FALSE) %>% 
-  left_join(sillys_strata_2020_n.df, by = c("silly_strata" = "silly")) %>% 
+  left_join(sillys_strata_2021_n.df, by = c("silly_strata" = "silly")) %>% 
   mutate(dates = ifelse(begin_date == end_date, 
                         format(begin_date, format = "%B %d"), 
                         paste(format(begin_date, format = "%B %d"), format(end_date, format = "%d"), sep = "-"))) %>% 
@@ -68,20 +68,20 @@ chignik_2020_dates.bayes %>%
 
 ```{r stock_comp_figure, fig.height=5.7, fig.width=7.5, fig.align="center"}
 mod_avg %>%
-  filter(date > "2020-06-15" & date < "2020-07-30") %>%
+  filter(date > "2021-06-15" & date < "2021-07-30") %>%
   mutate(black_early_prop = 1 - chignik_late_prop_adfg) %>%
   # mutate(black_prop = 1 - chignik_prop) %>%
   ggplot(aes(x = date, y = black_early_prop * 100)) +
   geom_line(lwd = 3) +
   # geom_line(aes(x = date, y = black_prop * 100), lwd = 3, colour = "grey50") +
   geom_point(
-    data = filter(chignik_2020_dates.bayes, repunit == "Black Lake"),
+    data = filter(chignik_2021_dates.bayes, repunit == "Black Lake"),
     aes(x = date, y = mean * 100),
     colour = "red",
     cex = 5
   ) +
   geom_errorbar(
-    data = filter(chignik_2020_dates.bayes, repunit == "Black Lake"),
+    data = filter(chignik_2021_dates.bayes, repunit == "Black Lake"),
     aes(x = date, ymin = `5%` * 100, ymax = `95%` * 100),
     inherit.aes = FALSE,
     colour = "red",
@@ -91,7 +91,7 @@ mod_avg %>%
   scale_x_date(date_labels = "%B %d", date_breaks = "1 week") +
   xlab("Sample Date") +
   ylab("Black Lake (Early Run) % of Sample") +
-  ggtitle("2020 Chignik Sockeye GSI\nwith Average Transition (ADF&G)") +
+  ggtitle("2021 Chignik Sockeye GSI\nwith Average Transition (ADF&G)") +
   theme_classic(base_size = 18) +
   theme(
     plot.title = element_text(hjust = 0.5),
